<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">>
    <string name="app_name">Confession</string>
    <string name="title_activity_main">Confession : A Catholic App</string>
    <string name="title_activity_create_user">Create User</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="male">Male</string>
    <string name="female">Female</string>

    <!-- Strings related to login -->
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="dob">Date of Birth</string>
    <string name="sex">Sex</string>
    <string name="vocation">Vocation</string>
    <string name="single">Single</string>
    <string name="married">Married</string>
    <string name="priest">Priest</string>
    <string name="religious">Religious</string>
    <string name="last_confession">Last Confession</string>
    <string name="save">Save</string>
    <string name="content_authority">com.abahnj.confession</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="person_added">User added successfully</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="incorrect_password">Password is Incorrect</string>
    <string name="invalid_query_uri">Invalid Uri Provided</string>
    <string name="examination">Examination of Conscience</string>
    <string name="confession">Confession</string>
    <string name="prayers">Prayers</string>
    <string name="title_activity_examination">Examination of Conscience</string>
    <string name="action_settings">Settings</string>
    <string name="user_details_pref">USER_DETAILS</string>

    <string name="pref_user_name" translatable="false">username</string>
    <string name="pref_user_sex" translatable="false">sex</string>
    <string name="pref_user_vocation" translatable="false">vocation</string>
    <string name="pref_user_birthDate" translatable="false">birthDate</string>
    <string name="pref_user_actOfContrition" translatable="false">actOfContrition</string>
    <string name="pref_user_lastConfession" translatable="false">lastConfession</string>
    <string name="pref_user_id" translatable="false">id</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_prayers">Prayers</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_confession">Confession</string>
    <string name="db_name">confession.db</string>
    <string name="sign_of_the_cross">In the name of the Father, and the Son, and the Holy Spirit. Amen</string>
    <string name="null_time_since_last">Tell the priest how long it has been since your last confession. Next time we will calculate this for you</string>
    <string name="time_since_last">Father, it has been <xliff:g id="time since last confession">%1$s</xliff:g> since my last confession.</string>
    <string name="confessionNotice">This app is intended to be used during the Sacrament of Reconciliation with a Catholic priest only. This is not a substitute for a valid confession.</string>
    <string name="context_menu_count">Count - 1</string>
    <string name="context_menu_edit">Edit</string>
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_restore">Restore Default Text</string>
    <string name="finish_confession">Finish Confession</string>
    <string name="receive_absolution">Receive absolution and respond \"Amen\"</string>
    <string name="response">If the priest says \"Give thanks to the Lord for He is good\" answer \"For His mercy endures forever.\"</string>
    <string name="guide">Guide</string>
    <string name="title_activity_guide">Confession Guide</string>
    <string name="title_activity_examination2">ExaminationActivity2</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_examination_activity_switcher">Examination of Conscience</string>
    <string name="create_user">Create User</string>
    <string name="select_user">Select User</string>
    <string name="dob_button">%1$d/%2$d/%3$d</string>
    <string name="reset_count">Reset Count</string>
    <string name="slide_input_checkbox">Check Something</string>
    <string name="slide_input_edittext">Type Something here</string>
    <string name="slide_input_title">Slide: Input Demo</string>
    <string name="slide_input_description">This slide demonstrates how input is saved over orientation and slide changes</string>
    <string name="here_are_my_sins">Here are my sins</string>
    <string name="act_of_contrition">Act of Contrition</string>
    <string name="faq">FAQ</string>
    <string name="as_said_by_popes">… As said by Popes</string>
    <string name="extracts_fulton_sheen">Extracts from Frequent Confession (Fulton Sheen)</string>
    <string name="catechism_of_the_catholic_church">Catechism of the Catholic Church</string>
    <string name="how_to_make_a_good_confession">How to Make a Good Confession</string>
    <string name="adult">Adult</string>
    <string name="teen">Teen</string>
    <string name="child">Child</string>


    <string name="menu_night_mode">Night mode</string>
    <string name="menu_night_mode_system">Follow system</string>
    <string name="menu_night_mode_day">Day (always)</string>
    <string name="menu_night_mode_night">Night (always)</string>
    <string name="menu_night_mode_auto">Auto</string>
    <string name="title_activity_settings">Settings</string>
    <string name="age">Age</string>
    <string name="emptyTextView">I seem to be empty.....\n are you sure you have performed an examination of conscience?</string>
    <string name="snackbar_success_text">Examination Updated Successfully</string>
    <string name="edit_examination_dialog_title">Edit Examination</string>
    <string name="share">Share</string>
    <string name="send_to">Send With</string>
    <string name="examination_image">Examination Image</string>
    <string name="prayers_image">Prayers Image</string>
    <string name="share_text">An app that helps you become the best Catholic possible. Designed to be used in the confessional, this app is the perfect aid for every penitent. \nhttps://play.google.com/store/apps/details?id=com.abahnj.confession </string>
</resources>
