<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.abahnj.confession.Main2Activity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_new"
        android:orderInCategory="10"
        android:title="Reset App"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_night"
        android:title="@string/menu_night_mode"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_night_mode_system"
                    android:title="@string/menu_night_mode_system" />
                <item
                    android:id="@+id/menu_night_mode_day"
                    android:title="@string/menu_night_mode_day" />
                <item
                    android:id="@+id/menu_night_mode_night"
                    android:title="@string/menu_night_mode_night" />
                <item
                    android:id="@+id/menu_night_mode_auto"
                    android:title="@string/menu_night_mode_auto" />
            </group>
        </menu>
    </item>
</menu>
