<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_weight=".2"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:fontFamily="sans-serif"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/default_gap"
        android:text="@string/faq"/>

    <TextView
        android:layout_weight=".2"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:text="@string/as_said_by_popes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/default_gap" />

    <TextView
        android:layout_weight=".2"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/default_gap"
        android:text="@string/extracts_fulton_sheen" />


    <TextView
        android:layout_weight=".2"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/default_gap"
        android:text="@string/catechism_of_the_catholic_church" />
    <TextView
        android:layout_weight=".2"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/default_gap"
        android:text="@string/how_to_make_a_good_confession" />
</LinearLayout>