<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grey"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:background="@color/white"
        android:elevation="4dp"
        app:cardCornerRadius="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/logo_pd" />

            <!-- Name Label -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/name_editTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextAppearance="@style/TextLabel">

                <EditText
                    android:fontFamily="sans-serif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textCapWords"
                    />
            </android.support.design.widget.TextInputLayout>


            <Spinner
                android:id="@+id/sex_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                app:layout_gravity="fill" />

            <Spinner
                android:id="@+id/vocation_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                app:layout_gravity="fill" />

            <TextView
                android:id="@+id/dob_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_border"
                android:gravity="center"
                android:onClick="showDateDob"
                android:text="@string/dob"
                android:textAlignment="center"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/last_confession_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_border"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:onClick="showDateLC"
                android:text="@string/last_confession"
                android:textAlignment="center"
                android:textSize="14sp" />

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:gravity="bottom"
                android:orientation="vertical">
                <!-- Signup Button -->
                <Button
                    android:id="@+id/save_user_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="@string/save" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>