<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.abahnj.confession.GuideActivity"
        >

        <android.support.v7.widget.CardView
            android:id="@+id/faq"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/default_gap"
            android:layout_weight=".2"
            android:elevation="@dimen/cardview_default_elevation"
            app:cardCornerRadius="4dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/faq" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_gravity="bottom"
                android:alpha=".7"
                android:background="@color/grey"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="end|center_vertical"
                android:padding="8dp"
                android:text="@string/faq"
                android:textSize="14sp"
                android:textStyle="bold" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/asbp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/default_gap"
            android:layout_weight=".2"
            android:elevation="@dimen/cardview_default_elevation"
            android:onClick="confession"
            app:cardCornerRadius="4dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/as_said_by_pope1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_gravity="bottom"
                android:alpha=".7"
                android:background="@color/grey"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="end|center_vertical"
                android:padding="8dp"
                android:text="@string/as_said_by_popes"
                android:textSize="14sp"
                android:textStyle="bold" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/effc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/default_gap"
            android:layout_weight=".2"
            android:elevation="@dimen/cardview_default_elevation"
            android:onClick="prayers"
            app:cardCornerRadius="@dimen/cardview_default_radius">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/fulton_sheen" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_gravity="bottom"
                android:alpha=".7"
                android:background="@color/grey"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="end|center_vertical"
                android:padding="8dp"
                android:text="@string/extracts_fulton_sheen"
                android:textSize="14sp"
                android:textStyle="bold" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/ccc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/default_gap"
            android:layout_weight=".2"
            android:elevation="@dimen/cardview_default_elevation"
            android:onClick="guide"
            app:cardCornerRadius="@dimen/cardview_default_radius">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ccc2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_gravity="bottom"
                android:alpha=".7"
                android:background="@color/grey"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="end|center_vertical"
                android:padding="8dp"
                android:text="@string/catechism_of_the_catholic_church"
                android:textSize="14sp"
                android:textStyle="bold" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/htmagc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/default_gap"
            android:layout_weight=".2"
            android:elevation="@dimen/cardview_default_elevation"
            android:onClick="guide"
            app:cardCornerRadius="@dimen/cardview_default_radius">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/confession" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_gravity="bottom"
                android:alpha=".7"
                android:background="@color/grey"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="end|center_vertical"
                android:padding="8dp"
                android:text="@string/how_to_make_a_good_confession"
                android:textSize="14sp"
                android:textStyle="bold" />
        </android.support.v7.widget.CardView>

    </LinearLayout>
